added configuration values

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+greeting-name=Dakota
+greeting-coffee=${greeting-name} is drinking Cafe Cereza
+greeting2.name=Dakota
+greeting2.coffee=${greeting2.name} is drinking Cafe Cereza
