added Droid values

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ greeting-name=Dakota
 greeting-coffee=${greeting-name} is drinking Cafe Cereza
 greeting2.name=Dakota
 greeting2.coffee=${greeting2.name} is drinking Cafe Cereza
+droid.id=BB-8
+droid.description=Small, rolling android
